# legal-agent-bench

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/_report/: research_report.md
docs/test_results/: coverage_summary.txt  pytest_output.txt  quality_gates.txt
results/_style/: repo.mplstyle
src/legal_agent_bench/: __init__.py  runner.py  types.py
src/legal_agent_bench/agent/: policies.py  react.py
src/legal_agent_bench/cli/: main.py
src/legal_agent_bench/judges/: council.py
src/legal_agent_bench/metrics/: score.py
src/legal_agent_bench/tasks/: synthetic.py
src/legal_agent_bench/tools/: registry.py
src/legal_agent_bench/viz/: charts.py
tests/: test_agent.py  test_judges.py  test_metrics.py  test_runner.py  test_tasks.py
